# PushUpAI

./: .gitignore  CLAUDE.md  Improve.md  README.md  Read_Results.md  compare_kinematics.py  debug.py  debug_angles.py  debug_precheck.py  debug_wrists.py  log_results.json  main.py  pyproject.toml  requirements.txt  test_pipeline.py
cache/: expert_reference.pkl
scripts/: precompute_reference.py
src/: engine.py  evaluator.py  processor.py  reference.py  reporting.py  rules.py  similarity.py
tests/: hybrid_aqa_video_benchmark.py  test_video_benchmark.py
