[project]
name = "match-pose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastdtw>=0.3.4",
    "mediapipe==0.10.11",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
